# ds-agents

./: .gitignore  README.md  chat.py  pyproject.toml
agents/: market_anomalies_agent.py  provider_audit_agent.py
ds_agents/: __init__.py  mcp_agents.py
ds_agents/mcp_agents/: __init__.py  anomalies.py  base.py  generic.py  provider.py
dsagents/: __init__.py  mcp_agents.py
scripts/: run_market_anomalies_agent.sh  run_mcp_market_anomalies_stdio.sh  run_mcp_provider_audit_stdio.sh  run_provider_audit_agent.sh  test_issue_scope_combined.py  test_overview_today.py
tests/: test_agents.py  test_market_anomalies_agent.py  test_provider_audit_agent.py
